clusters/talos-cluster/headscale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  labels:
    app: headscale
  namespace: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      name: headscale
      labels:
        app: headscale
    spec:
      containers:
        - name: headscale
          image: ghcr.io/ifargle/headscale-webui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
      restartPolicy: Always
