clusters/talos-cluster/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
spec:
  selector:
    app: headscale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
