clusters/talos-cluster/headscale/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headscale-route
  namespace: headscale
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - headscale.horus.ossai.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headscale
          port: 5000
